k8s/lastcup/secrets/03-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: lastcup-api
  namespace: lastcup
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: lastcup-api
  template:
    metadata:
      labels:
        app: lastcup-api
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: api
          image: ghcr.io/gdgoc2026-triples-project/2026_triples_team_6_be:sha-a09eae5
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
  strategy:
    blueGreen:
      activeService: lastcup-api-active
      previewService: lastcup-api-preview
      scaleDownDelaySeconds: 30
      autoPromotionEnabled: true
      prePromotionAnalysis:
        templates:
          - templateName: lastcup-api-prepromote
