k8s/lastcup/secrets/02-services.yaml

apiVersion: v1
kind: Service
metadata:
  name: lastcup-api-preview
  namespace: lastcup
spec:
  type: ClusterIP           # "클러스터 내부에서만 접근 가능한 ClusterIP로 서비스를 노출하겠다."
  selector:
    app: lastcup-api        # lastcup-api label 붙은 pod 대상 서비스
  ports:
    - name: http
      port: 80
      targetPort: 8080

# 두 서비스가 대상으로 하는 pod이 동일하다. 추후 Argo Rollouts가 런타임에 hash 라벨을 추가로 붙혀 구버전/신버전을 분리한다.
# Service는 문이고, Argo Rollouts는 문의 방향을 돌리는 사람이다.
