k8s/lastcup/secrets/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: lastcup
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.lastcup.site
      secretName: api-lastcup-tls
  rules:
    - host: api.lastcup.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lastcup-api-active
                port:
                  number: 80
